# scanv1

./: .dockerignore  .env.example  .gitignore  .replit  Dockerfile  Procfile  create_tables.py  database.py  embedding_engine.py  log.txt  main.py  mrxscan.db  nixpacks.toml  pyproject.toml  railway.json  replit.md  requirements.txt  start.sh  test_batch_upload.py  verify_all.py  verify_fix.py
attached_assets/: Pasted-Atualize-e-expanda-o-sistema-existente-de-scanner-por-i_1765812871266.txt  Pasted-Atualize-o-sistema-MRX-SCAN-para-incluir-identidade-vis_1765814370463.txt  Pasted-Crie-um-sistema-de-scanner-por-c-mera-para-classifica-o_1765807422672.txt  Pasted-Expanda-o-sistema-MRX-SCAN-para-incluir-um-modo-de-capt_1765814379576.txt  Pasted-Implemente-no-sistema-de-scanner-por-imagem-uma-funcion_1765808185926.txt  Pasted-You-reached-the-start-of-the-range-Dec-15-2025-2-48-PM-_1765821437013.txt
templates/: index.html
